# Dz

./: dz1.mwb
flaskProjectFlask/: app.py  crud.py  main.css  main.py  models.py  pyproject.toml  register_form.html  test.db  user.html
flaskProjectFlask/templates/: home.html
